@@ -30,6 +30,7 @@ Other features
  * Added instructions on how to generate urls for ``ModelAdmin`` to documentation (LB (Ben Johnston), Andy Babic)
  * Added option to specify a fallback URL on ``{% pageurl %}`` (Arthur Holzner)
  * Add support for more rich text formats, disabled by default: ``blockquote``, ``superscript``, ``subscript``, ``strikethrough``, ``code`` (Md Arifin Ibne Matin)
+ * Added ``max_count_per_parent`` option on page models to limit the number of pages of a given type that can be created under one parent page (Wesley van Lee)
 
 
 Bug fixes
